# -Development-of-a-Digital-Twin-for-a-Robotic-Manipulator-using-AC-Servo-motors

./: License  README.md
automation_lab_description/: CMakeLists.txt  package.xml
automation_lab_description/launch/: rsp.launch.py
automation_lab_description/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL
automation_lab_description/scripts/: motor_control  motor_control_bak
automation_lab_description/urdf/: automation_lab_description.csv  automation_lab_description.urdf
automation_lab_hardware_interface/: CMakeLists (copy).txt  CMakeLists.txt  hardware_interface_plugins.xml  package.xml
automation_lab_hardware_interface/config/: controllers.yaml
automation_lab_hardware_interface/include/automation_lab_hardware_interface/: automation_lab_hardware_interface.hpp
automation_lab_hardware_interface/launch/: hardware_interface.launch.py  test.launch.py
automation_lab_hardware_interface/src/: automation_lab_hardware_interface.cpp
automation_lab_moveit_config/: CMakeLists.txt  package.xml
automation_lab_moveit_config/config/: automation_lab_description.ros2_control.xacro  automation_lab_description.srdf  automation_lab_description.urdf.xacro  initial_positions.yaml
automation_lab_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
robot_2030a_controller/: package.xml
robot_2030a_controller/scripts/: query_msgs.py
robot_2030a_controller/src/: robot_2030a_interface.cpp
(+3 files in other folders)
